--- a/api/api.yaml
+++ b/api/api.yaml
@@ -698,95 +698,104 @@ paths:
     #     - authenticaion_key: []
     #     - authority_key: []
   "/admin/game/enemies/enemy/{id}":
-    patch:
-      tags:
-        - gameEnemies
-      summary: Update Enemy
-      description: ""
-      operationId: UpdateEnemyWithForm
-      parameters:
-        - name: authenticaion_key
-          in: header
-          description: api key
-          required: true
-          schema:
-            type: string
-        - name: authority_key
-          in: header
-          description: api key
-          required: true
-          schema:
-            type: array
-            items:
-              type: string
-        - name: id
-          in: path
-          description: ID of Enemy
-          required: true
-          schema:
-            type: integer
-            format: int64
-      requestBody:
-        content:
-          application/x-www-form-urlencoded:
-            schema:
-              type: object
-              properties:
-                name:
-                  description: name of Role
-                  type: string
-                level:
-                  description: level of Enemy
-                  type: integer
-                hp:
-                  description: hp of Enemy
-                  type: integer
-                mp:
-                  description: mp of Enemy
-                  type: integer
-                offence:
-                  description: offence of Enemy
-                  type: integer
-                defense:
-                  description: defense of Enemy
-                  type: integer
-                speed:
-                  description: speed of Enemy
-                  type: integer
-                magic:
-                  description: magic of Enemy
-                  type: integer
-              required:
-                - name
-                - level
-                - hp
-                - mp
-                - offence
-                - defense
-                - speed
-                - magic
-      responses:
-        "200":
-          description: successful UPdate
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiSuccessResponse"
-        "405":
-          description: Invalid input
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiErrorResponse"
-        "422":
-          description: Invalid input
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiErrorResponse"
-      security:
-        - authenticaion_key: []
-        - authority_key: []
+    parameters:
+      - name: id
+        in: path
+        description: ID of role
+        required: true
+        schema:
+          type: integer
+          format: int64
+    $ref: "./data/paths/admin/game/enemies/enemy/id.yaml"
+    # patch:
+    #   tags:
+    #     - gameEnemies
+    #   summary: Update Enemy
+    #   description: ""
+    #   operationId: UpdateEnemyWithForm
+    #   parameters:
+    #     - name: authenticaion_key
+    #       in: header
+    #       description: api key
+    #       required: true
+    #       schema:
+    #         type: string
+    #     - name: authority_key
+    #       in: header
+    #       description: api key
+    #       required: true
+    #       schema:
+    #         type: array
+    #         items:
+    #           type: string
+    #     - name: id
+    #       in: path
+    #       description: ID of Enemy
+    #       required: true
+    #       schema:
+    #         type: integer
+    #         format: int64
+    #   requestBody:
+    #     content:
+    #       application/x-www-form-urlencoded:
+    #         schema:
+    #           type: object
+    #           properties:
+    #             name:
+    #               description: name of Role
+    #               type: string
+    #             level:
+    #               description: level of Enemy
+    #               type: integer
+    #             hp:
+    #               description: hp of Enemy
+    #               type: integer
+    #             mp:
+    #               description: mp of Enemy
+    #               type: integer
+    #             offence:
+    #               description: offence of Enemy
+    #               type: integer
+    #             defense:
+    #               description: defense of Enemy
+    #               type: integer
+    #             speed:
+    #               description: speed of Enemy
+    #               type: integer
+    #             magic:
+    #               description: magic of Enemy
+    #               type: integer
+    #           required:
+    #             - name
+    #             - level
+    #             - hp
+    #             - mp
+    #             - offence
+    #             - defense
+    #             - speed
+    #             - magic
+    #   responses:
+    #     "200":
+    #       description: successful UPdate
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiSuccessResponse"
+    #     "405":
+    #       description: Invalid input
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiErrorResponse"
+    #     "422":
+    #       description: Invalid input
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiErrorResponse"
+    #   security:
+    #     - authenticaion_key: []
+    #     - authority_key: []
   /admin/game/enemies/enemy:
     delete:
       tags:
