--- a/api/api.yaml
+++ b/api/api.yaml
@@ -797,76 +797,77 @@ paths:
     #     - authenticaion_key: []
     #     - authority_key: []
   /admin/game/enemies/enemy:
-    delete:
-      tags:
-        - gameEnemies
-      summary: Deletes some enemies
-      description: ""
-      operationId: deleteEnemies
-      parameters:
-        - name: authenticaion_key
-          in: header
-          description: api key
-          required: true
-          schema:
-            type: string
-        - name: authority_key
-          in: header
-          description: api key
-          required: true
-          schema:
-            type: array
-            items:
-              type: string
-        - name: enemies
-          in: query
-          description: ID of Enemies
-          required: true
-          schema:
-            type: array
-            items:
-              type: integer
-      # requestBody:
-      #   content:
-      #     application/x-www-form-urlencoded:
-      #       schema:
-      #         type: object
-      #         properties:
-      #           enemies:
-      #             description: ID of role
-      #             type: array
-      #             items:
-      #               type: integer
-      #         required:
-      #           - enemies
-      responses:
-        "200":
-          description: successful Delete
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiSuccessResponse"
-        "400":
-          description: Invalid ID supplied
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiErrorResponse"
-        "404":
-          description: Membeer not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiErrorResponse"
-        "422":
-          description: Invalid ID supplied
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiErrorResponse"
-      security:
-        - authenticaion_key: []
-        - authority_key: []
+    $ref: "./data/paths/admin/game/enemies/enemy/index.yaml"
+    # delete:
+    #   tags:
+    #     - gameEnemies
+    #   summary: Deletes some enemies
+    #   description: ""
+    #   operationId: deleteEnemies
+    #   parameters:
+    #     - name: authenticaion_key
+    #       in: header
+    #       description: api key
+    #       required: true
+    #       schema:
+    #         type: string
+    #     - name: authority_key
+    #       in: header
+    #       description: api key
+    #       required: true
+    #       schema:
+    #         type: array
+    #         items:
+    #           type: string
+    #     - name: enemies
+    #       in: query
+    #       description: ID of Enemies
+    #       required: true
+    #       schema:
+    #         type: array
+    #         items:
+    #           type: integer
+    #   # requestBody:
+    #   #   content:
+    #   #     application/x-www-form-urlencoded:
+    #   #       schema:
+    #   #         type: object
+    #   #         properties:
+    #   #           enemies:
+    #   #             description: ID of role
+    #   #             type: array
+    #   #             items:
+    #   #               type: integer
+    #   #         required:
+    #   #           - enemies
+    #   responses:
+    #     "200":
+    #       description: successful Delete
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiSuccessResponse"
+    #     "400":
+    #       description: Invalid ID supplied
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiErrorResponse"
+    #     "404":
+    #       description: Membeer not found
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiErrorResponse"
+    #     "422":
+    #       description: Invalid ID supplied
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiErrorResponse"
+    #   security:
+    #     - authenticaion_key: []
+    #     - authority_key: []
   /auth/admin/login:
     $ref: "./data/paths/authAdmin/login.yaml"
     # post:
